feat 32: Update password register
