# cmd/swag/docs/swagger.yaml
@@ -9,6 +9,13 @@ definitions:
       verify_type:
         type: integer
     type: object
+  model.UpdatePasswordRegisterInput:
+    properties:
+      user_password:
+        type: string
+      user_token:
+        type: string
+    type: object
   model.VerifyInput:
     properties:
       verify_code:
@@ -70,6 +77,32 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponseData'
       summary: User Register
+      tags:
+      - account management
+  /user/update_pass_register:
+    post:
+      consumes:
+      - application/json
+      description: Update Password Register
+      parameters:
+      - description: payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdatePasswordRegisterInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponseData'
+      summary: Update Password Register
       tags:
       - account management
   /user/verify_account:
