# internal/routers/user/user.router.go
@@ -16,8 +16,9 @@ func (pr *UserRouter) InitUserRouter(router *gin.RouterGroup) {
 	{
 		// userRouterPublic.POST("/register", userController.Register)
 		userRouterPublic.POST("/register", account.Login.Register)
-		userRouterPublic.POST("/login", account.Login.Login)
 		userRouterPublic.POST("/verify_account", account.Login.VerifyOTP)
+		userRouterPublic.POST("/update_pass_register", account.Login.UpdatePasswordRegister)
+		userRouterPublic.POST("/login", account.Login.Login)
 	}
 
 	// private router
